--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML BASICO PARA INICIANTES</title>
     <style>
+    @media (max-width: 768px) {
+    body {
+        font-size: 14px;
+    }
+}
 
 body {
     font-family: Arial, sans-serif;
@@ -15,8 +20,9 @@ body {
     line-height: 1.6;
 }
 
-header, footer {
-    background-color: #004080;
+header,
+footer {
+    background-color: #034192;
     color: white;
     padding: 20px 0;
     text-align: center;
@@ -27,7 +33,7 @@ main {
 }
 
 a {
-    color: darkmagenta;
+    color: rgb(3, 220, 248);
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -44,11 +50,13 @@ mark {
     border-radius: 3px;
 }
 
-ol, ul {
+ol,
+ul {
     padding-left: 20px;
 }
 
-ol li, ul li {
+ol li,
+ul li {
     margin-bottom: 10px;
 }
 
@@ -61,7 +69,7 @@ ol li, ul li {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-    </style>
+</style>
 </head>
 <body>
     <header>
@@ -180,7 +188,7 @@ ol li, ul li {
             <p>Conteúdo da segunda seção.</p>
         </section>
         <p>Resultado: "Seção 1 <sub>conteúdo da primeira seção</sub>, Seção 2 <sub>conteúdo da segunda seção</sub>" Já está com a tag "hr" aplicada.</p>
-        <h2>Tag sub</h2>
+        <h2>Tag sub:</h2>
         <p>A tag "sub" no HTML é usada para exibir texto em subscrito, ou seja, ligeiramente abaixo da linha de base do texto normal. Ela é comumente utilizada em fórmulas matemáticas, notações químicas, ou em outras situações onde subscritos são necessários.</p>
         <section class="example">
             <p><strong>Exemplo da tag sub:</strong></p>
