--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ ul li {
         </section>
         <p>Resultado: "Texto em vermelho, texto com maior tamanho, texto em arial" Já está com a tag "font" aplicada</p>
         <h2>Tag del:</h2>
-        <p>A tag <del> no HTML é usada para indicar que um trecho de texto foi removido ou excluído de um documento. O navegador, por padrão, exibe o texto dentro da tag "del" com um traço ou linha no meio (chamado de riscado).</p>
+        <p>A tag "del" no HTML é usada para indicar que um trecho de texto foi removido ou excluído de um documento. O navegador, por padrão, exibe o texto dentro da tag "del" com um traço ou linha no meio (chamado de riscado).</p>
             <section class="example">
                 <p><strong>Exemplo da tag del:</strong></p>
                 <p>Este é o preço antigo: <del>R$50,00</del>.</p>
