--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML BASICO PARA INICIANTES</title>
+    <link rel="shortcut icon" href="images/Graphicloads-Colorful-Long-Shadow-Html-tags.16.png" type="icone principal da web">
     <style>
     @media (max-width: 768px) {
     body {
