--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@ ul li {
    <footer>
         <p>Desenvolvido em 01/07/2025, por <strong>João Flávio</strong> | 
         <a href="https://github.com/joaoflavio33" target="_blank">GitHub: /joaoflavio33</a>
+        <p>joaoflavio4002@gmail.com</p>
+        <p>+55 (71) 9 9610-1697</p>
         </p>
     </footer>
 </body>
