--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>HTML básico para iniciantes</title>
     <link rel="shortcut icon" href="images/Graphicloads-Colorful-Long-Shadow-Html-tags.16.png" type="icone principal da web">
     <style>
-    @media (max-width: 768px) {
+section blockquote {
+    border-left: red solid 4px;
+    background-color: antiquewhite;
+    margin: 10px;
+    padding: 10px;
+} 
+        
+@media (max-width: 768px) {
     body {
         font-size: 14px;
     }
@@ -69,7 +76,6 @@ ul li {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
 </style>
 </head>
 <body>
