--- a/index.html
+++ b/index.html
@@ -245,11 +245,11 @@ ul li {
             <p>Resultado: "EUA" Já está com a tag "abbr" aplicada. Se você colocar o mouse encima do texto, conseguirá perceber que tem o significado da abreviação.</p>
     </main>
    <footer>
-        <p>Desenvolvido em 01/07/2025, por <strong>João Flávio</strong> | 
-        <a href="https://github.com/joaoflavio33" target="_blank">GitHub: /joaoflavio33</a>
-        <p>joaoflavio4002@gmail.com</p>
-        <p>+55 (71) 9 9610-1697</p>
-        </p>
+        <p>Desenvolvido em 01/07/2025, por <strong>João Flávio</strong>
+        <p><a href="https://github.com/Joaoflavio33" target="_blank">Github: /Joaoflavio33</a></p>
+        <p><a href="mailto:joaoflavio4002@gmail.com?subject=Contato&body=Olá, gostaria de falar com você.">joaoflavio4002@gmail.com</a></p>
+        <p><a href="https://w.app/joaoflavio" target="_blank">+55 (71) 9 9610-1697</a></p>
+        <p>Projeto não comercial, desenvolvido com intuito de avançar em etapa na <a href="https://www.dio.me/">Dio.me</a></p>
     </footer>
 </body>
 </html>
